--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.7.0",
     "@vite-pwa/nuxt": "^0.10.6",
     "lodash": "^4.17.21",
     "nuxt": "^3.14.159",
