--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vuetify-nuxt-module": "^0.18.3"
   },
   "devDependencies": {
+    "@nuxtjs/pwa": "^3.3.5",
     "@types/lodash": "^4.17.13",
     "sass-embedded": "^1.80.6"
   }
