--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vite-pwa/nuxt": "^0.10.6",
     "lodash": "^4.17.21",
     "nuxt": "^3.14.159",
+    "pinia": "^2.3.0",
     "vue": "latest",
     "vue-router": "latest",
     "vuetify-nuxt-module": "^0.18.3"
