--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@nuxtjs/pwa": "^3.3.5",
     "@types/lodash": "^4.17.13",
+    "defu": "^6.1.4",
     "sass-embedded": "^1.80.6"
   }
 }
